- remove sleep from autorun.sh (no longer a problem on Ubuntu)
- cleaned up start.sh; removed color codes
- added hints for JVM arguments
- removed permgen argument (removed in Java 8)